Cambios en la estructura del MVC

--- a/Views/Shared/Components/MainSidebar/Default.cshtml
+++ b/Views/Shared/Components/MainSidebar/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Ferovi.Models.VM.MenuPrincipalViewModel>
+﻿@model List<Ferovi.Models.VM.MenusPrincipalesViewModel>
 
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
